# libcrux

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  PROOFS.md  Readme.md  SECURITY.md  TODO.md  flake.nix
.docker/c/: Dockerfile
.fstar-cache/hints/: Alloc.Vec.Drain.fst.hints  Alloc.Vec.fst.hints  Avx2NttCompose.fst.hints  Avx2NttTheory.fsti.hints  BitVec.Intrinsics.fsti.hints  BitVec.Utils.fst.hints  BitVecEq.fsti.hints  Bitvec.U64Rotate.fst.hints  Core_models.Array.Iter.fst.hints  Core_models.Array.fst.hints  Core_models.Bundle.fst.hints  Core_models.Cmp.fst.hints  Core_models.Convert.fst.hints  Core_models.Fmt.Rt.fsti.hints  Core_models.Iter.Bundle.fst.hints  Core_models.Num.Error.fsti.hints  Core_models.Num.fst.hints  Core_models.Ops.Control_flow.fst.hints  Core_models.Ops.Range.fst.hints  Core_models.Slice.Iter.fst.hints  Core_models.Slice.fst.hints  EquivImplSpec.Correctness.Avx2.fst.hints  EquivImplSpec.Correctness.Neon.fst.hints  EquivImplSpec.Correctness.Portable.fst.hints  EquivImplSpec.Keccakf.Arm64.fst.hints  EquivImplSpec.Keccakf.Avx2.fst.hints  EquivImplSpec.Keccakf.ChiFold.fst.hints  EquivImplSpec.Keccakf.Generic.fst.hints  EquivImplSpec.Keccakf.Portable.fst.hints  EquivImplSpec.Keccakf.SpecRounds.fst.hints  EquivImplSpec.Sponge.Arm64.API.fst.hints  EquivImplSpec.Sponge.Arm64.Driver.fst.hints  EquivImplSpec.Sponge.Arm64.SqueezeDriver.fst.hints  EquivImplSpec.Sponge.Arm64.Steps.fst.hints  EquivImplSpec.Sponge.Arm64.fst.hints  EquivImplSpec.Sponge.Avx2.SqueezeDriver.fst.hints  EquivImplSpec.Sponge.Avx2.Steps.fst.hints  EquivImplSpec.Sponge.Avx2.fst.hints  EquivImplSpec.Sponge.ByteForm.fst.hints  EquivImplSpec.Sponge.Generic.Core.fst.hints  (+411 more)
.github/workflows/: aead-build_test.yml  aes-riscv-arm.yml  aes.yml  docker-c-build-test.yml  docker-c-push-latest.yml  ecdh-build-test.yml  get-hax-ref.yml  intrinsics-hax.yml  kem-build-test.yml  kmac-hax.yml  libcrux-build-test.yml  libcrux-ct-test.yml  libcrux-flake-update.yml  mldsa-bench.yml  mldsa-build-test.yml  mldsa-c.yml  mldsa-hax.yml  mlkem-bench.yml  mlkem-build-test.yml  mlkem-c.yml  mlkem-hax.yml  mlkem-s390x.yml  platform-build-test.yml  psq-build-test.yml  psq-proverif.yml  secrets-build-test.yml  sha3-hax.yml  sha3-spec-test.yml  sync_libcrux.yml  traits-build.yml  wasm-and-no-std-checks.yml  workspace-changelog.yml  workspace-checks.yml
benchmarks/: Cargo.toml
combined_extraction/: extract-c-header.yaml  extract-c.yaml  extract.sh
combined_extraction/c/: CMakeLists.txt  code_gen.txt  combined_core.c  combined_core.h  eurydice_glue.h  header.txt  libcrux_ct_ops.c  libcrux_ct_ops.h  libcrux_intrinsics_avx2.h  libcrux_mldsa44_avx2.c  libcrux_mldsa44_avx2.h  libcrux_mldsa44_portable.c  libcrux_mldsa44_portable.h  libcrux_mldsa65_avx2.c  libcrux_mldsa65_avx2.h  libcrux_mldsa65_portable.c  libcrux_mldsa65_portable.h  libcrux_mldsa87_avx2.c  libcrux_mldsa87_avx2.h  libcrux_mldsa87_portable.c  libcrux_mldsa87_portable.h  libcrux_mldsa_avx2.c  libcrux_mldsa_avx2.h  libcrux_mldsa_core.c  libcrux_mldsa_core.h  libcrux_mldsa_portable.c  libcrux_mldsa_portable.h  libcrux_mlkem1024.h  libcrux_mlkem1024_avx2.c  libcrux_mlkem1024_avx2.h  libcrux_mlkem1024_portable.c  libcrux_mlkem1024_portable.h  libcrux_mlkem512.h  libcrux_mlkem512_avx2.c  libcrux_mlkem512_avx2.h  libcrux_mlkem512_portable.c  libcrux_mlkem512_portable.h  libcrux_mlkem768.h  libcrux_mlkem768_avx2.c  libcrux_mlkem768_avx2.h  (+12 more)
combined_extraction/c-header-only/: code_gen.txt  combined_core.h  eurydice_glue.h  intrinsics  karamel  libcrux_ct_ops.h  libcrux_mldsa44_avx2.h  libcrux_mldsa44_portable.h  libcrux_mldsa65_avx2.h  libcrux_mldsa65_portable.h  libcrux_mldsa87_avx2.h  libcrux_mldsa87_portable.h  libcrux_mldsa_avx2.h  libcrux_mldsa_core.h  libcrux_mldsa_portable.h  tests  (+6 more)
combined_extraction/c/internal/: combined_core.h  libcrux_mldsa_avx2.h  libcrux_mldsa_core.h  libcrux_mlkem1024_avx2.h  libcrux_mlkem1024_portable.h  libcrux_mlkem512_avx2.h  libcrux_mlkem512_portable.h  libcrux_mlkem768_avx2.h  libcrux_mlkem768_portable.h  libcrux_mlkem_avx2.h  libcrux_mlkem_common.h  libcrux_mlkem_core.h  libcrux_mlkem_portable.h  libcrux_sha3_portable.h
combined_extraction/c/tests/: mldsa44.cc  mldsa65.cc  mldsa87.cc  mlkem512.cc  mlkem768.cc  util.h
fstar-helpers/: Makefile.base  Makefile.generic
libcrux-ml-dsa/: CHANGELOG.md  Cargo.toml  c.sh  cg.yaml  hax.sh  verification_result.txt
libcrux-ml-kem/: .gitignore  Cargo.toml  README.md  hax.py  verification_result.txt
libcrux-psq/: Cargo.toml
specs/: Cargo.toml
specs/ml-kem/: Cargo.toml  Readme.md  hax_aeneas.py
specs/ml-kem/proofs/aeneas-lean/: lake-manifest.json  lakefile.toml
specs/ml-kem/proofs/aeneas-lean/HacspecMlKem/: Missing.lean
specs/ml-kem/proofs/aeneas-lean/HacspecMlKem/Extraction/: Funs.lean
specs/ml-kem/proofs/fstar/commute/: Hacspec_ml_kem.Commute.Bridges.fst  Hacspec_ml_kem.Commute.Chunk.fst  Hacspec_ml_kem.Commute.Compute_dot_bridge.fst  Hacspec_ml_kem.Commute.Compute_u_bridge.fst  Hacspec_ml_kem.Commute.Encrypt_bridge.fst  Hacspec_ml_kem.Commute.Ind_cca_bridge.fst  Hacspec_ml_kem.Commute.Ind_cpa_deserialize_u.fst  Hacspec_ml_kem.Commute.Ind_cpa_sampling.fst  Hacspec_ml_kem.Commute.Ind_cpa_serialize.fst  Hacspec_ml_kem.Commute.Invert_ntt_bridge.fst  Hacspec_ml_kem.Commute.Invert_scale.fst  Hacspec_ml_kem.Commute.Keygen_bridge.fst  Hacspec_ml_kem.Commute.Matrix_bilin.fst  Hacspec_ml_kem.Commute.Matrix_bilin2.fst  Hacspec_ml_kem.Commute.Matrix_bridge.fst  Hacspec_ml_kem.Commute.Matrix_zerolift.fst  Hacspec_ml_kem.Commute.Ntt_bridge.fst  Hacspec_ml_kem.Commute.Prf_bridge.fst  Hacspec_ml_kem.Commute.Rej_table.fst  Hacspec_ml_kem.Commute.Sample_matrix_bridge.fst  Hacspec_ml_kem.Commute.Sampling_cbd.fst  Hacspec_ml_kem.Commute.Scratch14.fst  Hacspec_ml_kem.Commute.Serialize.fst  Hacspec_ml_kem.Commute.Serialize_bits.fst  Hacspec_ml_kem.Commute.Serialize_compress.fst
specs/ml-kem/src/: compress.rs  ind_cca.rs  ind_cpa.rs  lib.rs  ntt.rs  parameters.rs  sampling.rs  serialize.rs
specs/ml-kem/tests/: spec_properties.rs
src/: algorithms.rs  protocols.rs
(+529 files in other folders)
