[package]
name = "hacspec_ml_kem"
version = "0.1.0"
edition = "2021"

[dependencies]
hacspec_sha3 = { path = "../sha3" }
hax-lib = "=0.3.6"

[lints.rust]
# `hax` / `hax_backend_lean` are set during extraction (the latter via
# RUSTFLAGS in hax_aeneas.py); declare them so the `unexpected_cfgs`
# check-cfg lint does not warn on `#[cfg(hax)]` / `#[cfg(hax_backend_lean)]`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(hax_backend_lean)'] }

[dev-dependencies]
hacspec_sha3 = { path = "../sha3" }
hex = { version = "0.4.3", features = ["serde"] }
proptest = "1.2.0"
rand = "0.9"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
